[gd_scene load_steps=43 format=3 uid="uid://ccdrxspa8n2o2"]

[ext_resource type="Script" uid="uid://bmlahpp3dxjpg" path="res://Escenarios/HUD/hud.gd" id="1_88kyl"]
[ext_resource type="Texture2D" uid="uid://w03heew0rlsd" path="res://assets/HUD/AndresHUD/AndresHUD1.png" id="1_j275x"]
[ext_resource type="Texture2D" uid="uid://tqri0df4ste1" path="res://assets/HUD/AndresHUD/AndresHUD2.png" id="2_88kyl"]
[ext_resource type="Texture2D" uid="uid://bqkvolukw25yd" path="res://assets/HUD/BarraVida/BarrVacia.png" id="2_lhsnj"]
[ext_resource type="Texture2D" uid="uid://dd8vljsvqfe73" path="res://assets/HUD/AndresHUD/AndresHUD3.png" id="3_1r18p"]
[ext_resource type="Texture2D" uid="uid://dgk6w6hym6aj0" path="res://assets/HUD/BarraVida/BarrLleno.png" id="3_c1417"]
[ext_resource type="Texture2D" uid="uid://d1jwj0klrtysp" path="res://assets/HUD/AndresHUD/AndresHUD4.png" id="4_1m7tk"]
[ext_resource type="Texture2D" uid="uid://tbbxdko0602x" path="res://assets/HUD/BarraCordura/cordurebarbor.png" id="4_d2qae"]
[ext_resource type="Shader" uid="uid://cykckdrsy4ulo" path="res://Escenarios/HUD/shaderRedondo.gdshader" id="4_rryy6"]
[ext_resource type="Texture2D" uid="uid://sy6jn07nkvto" path="res://assets/HUD/BarraCordura/cordurebarbg.png" id="5_p00t3"]
[ext_resource type="Texture2D" uid="uid://cyspmdckndt8g" path="res://assets/HUD/AndresHUD/AndresHUD5.png" id="5_rryy6"]
[ext_resource type="Texture2D" uid="uid://bbmnb2ahyg872" path="res://assets/HUD/AndresHUD/AndresHUD7.png" id="6_x08bo"]
[ext_resource type="Texture2D" uid="uid://d2e0aac362awa" path="res://assets/HUD/AndresHUD/AndresHUD6.png" id="7_2xful"]
[ext_resource type="Texture2D" uid="uid://bf0pao54ohgxv" path="res://assets/HUD/AndresHUD/AndresHUD8.png" id="8_aant6"]
[ext_resource type="Texture2D" uid="uid://6x7kpkuvyvht" path="res://assets/HUD/AndresHUD/AndresHUD12.png" id="9_ym6sg"]
[ext_resource type="Texture2D" uid="uid://dtqyv0ua248m5" path="res://assets/HUD/AndresHUD/AndresHUD11.png" id="10_lhsnj"]
[ext_resource type="Texture2D" uid="uid://b2eywv3he0sf2" path="res://assets/HUD/AndresHUD/AndresHUD10.png" id="11_c1417"]
[ext_resource type="Texture2D" uid="uid://braxjj243lm2y" path="res://assets/HUD/AndresHUD/AndresHUD13.png" id="12_d2qae"]
[ext_resource type="Texture2D" uid="uid://k0gjr4xpatx4" path="res://assets/HUD/AndresHUD/AndresHUD9.png" id="13_p00t3"]
[ext_resource type="Texture2D" uid="uid://txax3yvm5p1g" path="res://assets/HUD/AndresHUD/AndresHUD14.png" id="14_0ckq7"]
[ext_resource type="Texture2D" uid="uid://blveil7fx4kbx" path="res://assets/HUD/AndresHUD/AndresHUD17.png" id="15_rfetd"]
[ext_resource type="Texture2D" uid="uid://cgfygajm2cmo4" path="res://assets/HUD/AndresHUD/AndresHUD16.png" id="16_es07j"]
[ext_resource type="Texture2D" uid="uid://cfrr05m00f11k" path="res://assets/HUD/AndresHUD/AndresHUD15.png" id="17_gol4g"]
[ext_resource type="Texture2D" uid="uid://7u3e5w8jmap0" path="res://assets/HUD/AndresHUD/AndresHUD19.png" id="18_7u83s"]
[ext_resource type="Texture2D" uid="uid://ccdtdj2lubypm" path="res://assets/HUD/AndresHUD/AndresHUD18.png" id="19_v7ujq"]
[ext_resource type="Texture2D" uid="uid://dwkk20gp4tagp" path="res://assets/HUD/AndresHUD/AndresHUD20.png" id="20_ilbkt"]
[ext_resource type="Texture2D" uid="uid://elcaey0tl60f" path="res://assets/HUD/AndresHUD/AndresHUD23.png" id="21_45yx4"]
[ext_resource type="Texture2D" uid="uid://lfmvopd0mq7v" path="res://assets/HUD/AndresHUD/AndresHUD22.png" id="22_rtq04"]
[ext_resource type="Texture2D" uid="uid://ch3nvbjumveyc" path="res://assets/HUD/AndresHUD/AndresHUD21.png" id="23_mrk6w"]
[ext_resource type="Texture2D" uid="uid://dsc316fdl1thc" path="res://assets/HUD/AndresHUD/andresRealista/MANOLO1 (1).png" id="28_aant6"]
[ext_resource type="Texture2D" uid="uid://nqken6k48s0l" path="res://assets/HUD/AndresHUD/andresRealista/MANOLO3.png" id="28_x08bo"]
[ext_resource type="Texture2D" uid="uid://dx8g1murwrigc" path="res://assets/HUD/AndresHUD/andresRealista/MANOLO3 (1).png" id="30_ym6sg"]
[ext_resource type="Texture2D" uid="uid://qoknceheceit" path="res://assets/HUD/CordureFlash/Cordureojos.png" id="33_d2qae"]
[ext_resource type="Texture2D" uid="uid://ceuu2tc8vjgky" path="res://assets/HUD/CordureFlash/CordureLuna.png" id="34_p00t3"]
[ext_resource type="AudioStream" uid="uid://cy10crttsryye" path="res://assets/sounds/SoundsHUD/721496__synth2__static-tv-sound.wav" id="35_p00t3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x08bo"]
shader = ExtResource("4_rryy6")

[sub_resource type="SpriteFrames" id="SpriteFrames_qcu47"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_j275x")
}, {
"duration": 1.0,
"texture": ExtResource("2_88kyl")
}, {
"duration": 1.0,
"texture": ExtResource("3_1r18p")
}, {
"duration": 1.0,
"texture": ExtResource("4_1m7tk")
}, {
"duration": 1.0,
"texture": ExtResource("5_rryy6")
}, {
"duration": 1.0,
"texture": ExtResource("6_x08bo")
}, {
"duration": 1.0,
"texture": ExtResource("7_2xful")
}, {
"duration": 1.0,
"texture": ExtResource("8_aant6")
}, {
"duration": 1.0,
"texture": ExtResource("9_ym6sg")
}, {
"duration": 1.0,
"texture": ExtResource("10_lhsnj")
}, {
"duration": 1.0,
"texture": ExtResource("11_c1417")
}, {
"duration": 1.0,
"texture": ExtResource("12_d2qae")
}, {
"duration": 1.0,
"texture": ExtResource("13_p00t3")
}, {
"duration": 1.0,
"texture": ExtResource("14_0ckq7")
}, {
"duration": 1.0,
"texture": ExtResource("15_rfetd")
}, {
"duration": 1.0,
"texture": ExtResource("16_es07j")
}, {
"duration": 1.0,
"texture": ExtResource("17_gol4g")
}, {
"duration": 1.0,
"texture": ExtResource("18_7u83s")
}, {
"duration": 1.0,
"texture": ExtResource("19_v7ujq")
}, {
"duration": 1.0,
"texture": ExtResource("20_ilbkt")
}, {
"duration": 1.0,
"texture": ExtResource("21_45yx4")
}, {
"duration": 1.0,
"texture": ExtResource("22_rtq04")
}, {
"duration": 1.0,
"texture": ExtResource("23_mrk6w")
}],
"loop": true,
"name": &"Default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("28_aant6")
}, {
"duration": 1.0,
"texture": ExtResource("28_x08bo")
}, {
"duration": 1.0,
"texture": ExtResource("30_ym6sg")
}],
"loop": true,
"name": &"Realista",
"speed": 3.0
}]

[sub_resource type="Animation" id="Animation_rfetd"]
resource_name = "Luna"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/CordureLuna:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="Animation" id="Animation_0ckq7"]
resource_name = "Ojos"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/CordureOjos:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer2D:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_c1417"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/CordureOjos:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/CordureLuna:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_lhsnj"]
resource_name = "flash"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d2qae"]
_data = {
&"Luna": SubResource("Animation_rfetd"),
&"Ojos": SubResource("Animation_0ckq7"),
&"RESET": SubResource("Animation_c1417"),
&"flash": SubResource("Animation_lhsnj")
}

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_88kyl")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
offset_left = 32.0
offset_top = 29.0
offset_right = 266.0
offset_bottom = 264.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="VidaHUD" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="VIDA" type="CanvasLayer" parent="HBoxContainer/VBoxContainer/VidaHUD"]
offset = Vector2(188, 10)
scale = Vector2(3.5, 3.5)
transform = Transform2D(3.5, 0, 0, 3.5, 188, 10)

[node name="BarraVida" type="TextureProgressBar" parent="HBoxContainer/VBoxContainer/VidaHUD/VIDA"]
texture_filter = 1
offset_left = 1.0
offset_right = 77.0
offset_bottom = 20.0
value = 100.0
texture_over = ExtResource("2_lhsnj")
texture_progress = ExtResource("3_c1417")

[node name="EstadoHUD" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="CORDURA" type="CanvasLayer" parent="HBoxContainer/VBoxContainer/EstadoHUD"]
offset = Vector2(229, 37)
scale = Vector2(3.5, 3.5)
transform = Transform2D(3.5, 0, 0, 3.5, 229, 37)

[node name="BarraCordura" type="TextureProgressBar" parent="HBoxContainer/VBoxContainer/EstadoHUD/CORDURA"]
texture_filter = 1
offset_right = 40.0
offset_bottom = 40.0
value = 100.0
texture_over = ExtResource("4_d2qae")
texture_progress = ExtResource("5_p00t3")

[node name="Sprite" type="CanvasLayer" parent="HBoxContainer/VBoxContainer/EstadoHUD"]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="HBoxContainer/VBoxContainer/EstadoHUD/Sprite"]
material = SubResource("ShaderMaterial_x08bo")
position = Vector2(99, 92)
scale = Vector2(0.16, 0.16)
sprite_frames = SubResource("SpriteFrames_qcu47")
animation = &"Default"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_d2qae")
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
top_level = true
texture_filter = 1
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.666667, 0.0705882, 0.0431373, 0.541176)

[node name="CordureOjos" type="TextureRect" parent="CanvasLayer"]
visible = false
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("33_d2qae")
expand_mode = 1

[node name="CordureLuna" type="TextureRect" parent="CanvasLayer"]
visible = false
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("34_p00t3")
expand_mode = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("35_p00t3")
bus = &"Efectos de sonido"

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
